fix bux overflow-x

--- a/asset/setyle.css
+++ b/asset/setyle.css
@@ -18,6 +18,7 @@ body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
   background: #efefef;
+  overflow-x: hidden;
 }
 
 /* commot */
